Created Posts UI
To do: Shift GitHub website to GitLab and vice-versa

--- a/index.html
+++ b/index.html
@@ -54,6 +54,6 @@
         </main>
       </div>
     </div>
-   <script src="/js/function.min.js" integrity="sha512-IFvQDCZ4EIE4d+8Mn6GiAkXvU9RWIJILaTKXNZmLfrFRlRrJtAWgTwU8GYi1Vtn8syTjaOkLGZCN4SDBTDZnQA=="></script>
+   <script src="/js/function.min.js"></script>
   </body>
 </html>
