--- a/index.html
+++ b/index.html
@@ -23,10 +23,8 @@
       <section class="wt-section pt-4 bg-black"> 
         <div class="container">
           <div class="row align-items-center">
-            <div class="col-md-6 text-center pb-4">
-              <h1 class="text-uppercase display-4">Alan Jojo</h1>
-              <p class="h5">Computer Science Engineer</p> 
-            </div>
+            <h1 class="text-uppercase display-4">Alan Jojo</h1>
+            <p class="h5">Computer Science Engineer</p> 
           <!--
             <div class="col-md-6 text-center pb-4">
               <img src="images/Alan.png" class="w-100" alt="Alan Jojo">
@@ -38,21 +36,6 @@
     </header>
 
     <main role="main">
-      <div class="card bg-primary border-0 rounded-0 py-4">
-        <div class="container">
-          <div class="row justify-content-between align-items-center text-center">
-            <div class="col-md-8">
-              <p class="mb-0 d-inline-block">I am a Research candidate at the Department of Computer Science and Automation in IISc Banglore.</p>
-            </div>
-          <!--
-            <div class="col-md-4 mt-md-0 mt-3">
-              <a href="Resume.pdf" target="_blank" class="btn btn-outline-success">Download Resume</a>
-            </div>
-          -->
-          </div>
-        </div>
-      </div>
-
       <section class="wt-section bg-black link-muted">
         <div class="container">
           <div class="row justify-content-between py-5">
@@ -60,15 +43,15 @@
               <h2 class="mb-4 text-center">About Myself</h2>
               <p class="text-muted">
                 Currently a Research candidate at the Department of <a href="https://www.csa.iisc.ac.in/" target="_blank">Computer Science and Automation</a> in <a href="https://iisc.ac.in/" target="blank">IISc Banglore</a>.
-<!--                I work under the guidance of <a href="https://www.csa.iisc.ac.in/~arpita/" target="_blank">Dr. Arpita Patra</a> in <a href="https://www.csa.iisc.ac.in/~cris/index.html" target="_blank">Cryptography and Information Security Lab</a>.-->
+                I work under the guidance of <a href="https://www.csa.iisc.ac.in/~arpita/" target="_blank">Dr. Arpita Patra</a> in <a href="https://www.csa.iisc.ac.in/~cris/index.html" target="_blank">Cryptography and Information Security Lab</a>.
               <br><br>I have completed my B.Tech in Computer Science and Engineering from <a href="https://nitc.ac.in/" target="_blank">NIT Calicut</a> by 2022.
               </p>
             </div>
             <div class="col-md-6">
               <h2 class="mb-4 text-center">Interests</h2>
               <p class="text-muted">
-                I am interested in Discrete Mathematics, Cryptography, Compilers and Operating Systems. While I am free, I tinker with Linux-based dirtibutions and open source applications.
-                <br><br>I have also watched a fair share of anime and enjoy music a lot.
+                I am interested in Discrete Mathematics, Cryptography, Compilers and Operating Systems.
+                While I am free, I tinker with Linux-based dirtibutions and open source applications.
               </p>
             </div>
           </div>
@@ -121,7 +104,10 @@
           <div class="row pt-5 pb-3">
             <div class="col-md-6 pt-md-10 text-center">
               <h2 class="pt-md-10">Education</h2>
-              <p class="lead text-muted pt-md-10">Currently, I hold a B.Tech degree in Computer Science and Engineering</p>
+              <p class="lead text-muted pt-md-10">
+                I hold a B.Tech degree in Computer Science and Engineering.
+                <br>Currently, I am a Ph.D. student at IISc Bangalore.
+              </p>
             </div>
             <div class="col-md-6">
               <ul class="timeline">
@@ -129,7 +115,7 @@
                   <h5><a href="https://iisc.ac.in/" target="_blank">IISc Banglore</a></h5>
                   <i>Aug 2022</i> - <i>Present</i> : <strong>Doctor of Philosophy (Ph.D.)</strong>
                   <p class="text-muted d-block mt-3">
-                    Ph.D. in Computer Science and Engineering<br>
+                    Ph.D. in Theoretical Computer Science<br>
                   </p>
                 </li>
                 <li>
@@ -312,7 +298,7 @@
           <div class="mb-4">
             <h1>Contact me</h1>
             <p class="lead">
-              Hey, if you want help with a project or have a nice discussion, please send a mail to me.
+              Hey, if you want help with a project or have a discussion, please send a mail to me.
             </p>
           </div>
           <div class="row pb-5">
@@ -325,19 +311,10 @@
             <div class="col-lg-3 col-md-4 col-sm-6 py-2">
               <a href="mailto:alanjojojose@gmail.com" class="btn btn-outline-success">alanjojojose@gmail.com</a>
             </div>
-            <div class="col-lg-3 col-md-4 col-sm-6 py-2">
-              <a href="mailto:alanjojojose@yahoo.com" class="btn btn-outline-success">alanjojojose@yahoo.com</a>
-            </div>
-            <div class="col-lg-3 col-md-4 col-sm-6 py-2">
-              <a href="mailto:alanjojojose@outlook.com" class="btn btn-outline-success">alanjojojose@outlook.com</a>
-            </div>
-            <div class="col-lg-3 col-md-4 col-sm-6 py-2">
-              <a href="mailto:alan_b180008cs@nitc.ac.in" class="btn btn-outline-success">alan_b180008cs@nitc.ac.in</a>
-            </div>
           </div>
           <div class="link-blue">
             <p>
-              Oh! And use my <a href="https://pgp.mit.edu/pks/lookup?search=alanjojo%40proton.me&op=index" target="_blank">GPG Public Key</a> if you want to send me a secret
+              Oh! And find my <a href="https://pgp.mit.edu/pks/lookup?search=alanjojo%40proton.me&op=index" target="_blank">Public GPG Key from here</a>.
             </p>
           </div>
         </div>
