--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="container">
           <div class="row align-items-center">
             <h1 class="text-uppercase display-4">Alan Jojo</h1>
-            <p class="h5">Computer Science Engineer</p> 
+            <!--<p class="h5">Computer Science Engineer</p> -->
           <!--
             <div class="col-md-6 text-center pb-4">
               <img src="images/Alan.png" class="w-100" alt="Alan Jojo">
@@ -71,12 +71,12 @@
                 <p>Technically, my mother tongue. Default language I go to whenever I want to write something.</p> 
               </div>
             </div>
-            <div class="col-md-3">
+            <!--<div class="col-md-3">
               <div class="bg-black p-4 mb-3 text-center">
                 <h3 class="mb-2">Rust</h2>
                 <p>Learned to help other Linux developers rewrite their application in Rust.</p>
               </div>
-            </div>
+            </div>-->
             <div class="col-md-3">
               <div class="bg-black p-4 mb-3 text-center">
                 <h3 class="mb-2">Python</h2>
@@ -174,7 +174,7 @@
                 <img class="img-fluid" src="images/projects/projects.jpg" alt="Projects" style="margin:auto">
               </a>
             </div> 
-            <div class="col-lg-3 col-md-4 col-6 col-sm pb-4"> 
+            <!--<div class="col-lg-3 col-md-4 col-6 col-sm pb-4"> 
               <a href="#projects">
                 <img class="img-fluid" src="images/projects/blank.jpg" alt="Blank" style="margin:auto">
               </a>
@@ -183,7 +183,7 @@
               <a href="#projects">
                 <img class="img-fluid" src="images/projects/blank.jpg" alt="Blank" style="margin:auto">
               </a>
-            </div> 
+            </div> -->
           </div>
         </div>
       </section>	
@@ -233,7 +233,7 @@
                 </div>
               </a>
             </div>
-            <div class="col-lg-2 col-md-3 col-4 col-sm pb-3 pb-md-4 pb-lg-5">
+            <!--<div class="col-lg-2 col-md-3 col-4 col-sm pb-3 pb-md-4 pb-lg-5">
               <a href="https://www.hackerrank.com/alanjojo" target="_blank">
                 <div class="account">
                   <img class="img-fluid" src="images/accounts/hackerrank.png" alt="HackerRank">
@@ -286,7 +286,7 @@
                   <p class="username">alanjojo</p>
                 </div>
               </a>
-            </div>
+            </div>-->
           </div>
         </div>
       </section>
